--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div id="splash">
-    <img src="/images/load.png" alt="Loading...">
+    <img src="load.png" alt="Loading...">
     <p>DriveSmart</p>
   </div>
 
@@ -43,3 +43,4 @@
   </footer>
 </body>
 </html>
+
