--- a/instructors.html
+++ b/instructors.html
@@ -19,16 +19,16 @@
       <a href="about.html">About</a>
       <a href="courses.html">Services</a>
       <a href="booking.html">Booking</a>
-      <a href="instructors.html">Booking</a>
+      <a href="instructors.html">Inructors</a>
       <a href="contact.html">Contact</a>
   </nav>
   </header>
 
   <section>
     <h2>Meet Our Instructors</h2>
-    <div class="card"><h3>John Smith</h3><p>10+ years experience, calm and patient.</p></div>
-    <div class="card"><h3>Sarah Johnson</h3><p>Defensive driving and road safety specialist.</p></div>
-    <div class="card"><h3>David Lee</h3><p>Expert in advanced and night driving.</p></div>
+    <div class="card"><h3>Ashok kokate</h3><p>10+ years experience, calm and patient.</p></div>
+    <div class="card"><h3>Kishor</h3><p>Defensive driving and road safety specialist.</p></div>
+    <div class="card"><h3>Kishor</h3><p>Expert in advanced and night driving.</p></div>
   </section>
 
   <footer>
@@ -38,3 +38,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
